css/styles.css
body {
  text-align: center;
  background-color: rgb(242, 250, 244);
}

section {
  margin: 4rem 0;
}

hr {
  height: 0;
  border-color: #d6e0f0;
  border-style: none dotted none none;
  border-width: 6px;
  height: 3rem;
  width: 0%;
}

#title {
  padding-top: 20px;
  margin: 0rem 0;
  color: white;
}

#experience {
  margin-top: 150px;
}

#nav-main {
  left: 0;
  right: 0;
  /* background: -webkit-linear-gradient(
    top,
    white,
    white 70%,
    rgba(255, 255, 255, 0)
  ); */
  z-index: 100;
}

h1,
h2,
h3,
h4 {
  font-family: "Bebas Neue", cursive;
}

h1 {
  font-weight: 700;
  font-size: 5.5rem;
  margin-bottom: 0;
}

h2 {
  font-size: 3.8rem;
  margin: 2rem 0;
}

.social {

}

.abso {
  position: absolute;
}

.test {
  background-image: linear-gradient(
    176deg,
    rgb(144, 238, 144) 70%,
    transparent 10%
  );
}

.blurb {
  padding-bottom: 50px;
}

.sticky {
  position: fixed;
  top: 0;
  width: 100%;
}

.content {
  padding: 16px;
}
.sticky + .content {
  padding-top: 60px;
}

.btn-dark {
  background-color: rgb(89, 193, 105);
  border-color: rgb(89, 193, 105);
  border-radius: 8px;
}

.btn-dark:hover {
  background-color: rgb(63, 155, 77);
  border-color: rgb(63, 155, 77);
  box-shadow: 1px 1px 20px rgb(250, 250, 250);
}

.logo-black {
  width: 100px;
  max-width: 100px;
  position: absolute;
  margin: auto;
  left: 0;
  right: 0;
  opacity: 0;
}

.logo-white {
  width: 100px;
  max-width: 100px;
}

.nav-bg {
  position: absolute;
  background: -webkit-linear-gradient(
    90deg,
    rgba(255, 255, 255, 0) 0%,
    rgba(255, 255, 255, 1) 70%,
    rgba(255, 255, 255, 1) 100%
  );
  opacity: 0;
  width: 100%;
  height: 200px;
}

.nav-link {
  padding: 0.4rem 0.5rem;
}

.nav-pad {
  padding-top: 3px;
  padding-bottom: 2rem;
}

.extra-pad {
  padding-top: 135px;
}

.position-company {
  display: inline-block;
}

.company {
  font-weight: 700;
  font-size: 1.5rem;
}

.position {
  font-style: italic;
}

.position-company p {
  display: inline-block;
}

.location {
  font-weight: 200;
}

.header {
  height: 450px;
}

.period {
  font-family: "Montserrat";
  font-weight: 600;
}

.experience-head {
  margin-bottom: 0.5rem;
}

.experience-head p {
  margin: 0;
}

.experience-body {
  margin: 1.5rem 0;
}

.experience-card {
  margin: 2rem auto;
  padding: 2rem;
  box-shadow: 5px 5px 20px #d3e3e8;
  border-radius: 10%;
  max-width: 85%;
  background-color: white;
}

@media (max-width: 776px) {
  .experience-card {
    max-width: 96%;
  }
}

.nav-narrow {
  display: none;
}

.nav-wide {
  padding-left: 100px;
  padding-right: 100px;
}

@media (max-width: 1000px) {
  .nav-wide {
    padding-left: 20px;
    padding-right: 20px;
  }
}

@media (max-width: 625px) {
  .nav-wide {
    display: none;
  }

  .nav-narrow {
    display: block;
  }
}

.section-container {
  padding-top: 72px;
}

.skill-card {
  padding: 0.5rem 0.7rem;
  margin: auto;
  /* background: red; */
}

.skill-section {
  padding: 0.7rem 2.7rem;
  margin: 1.5rem 0;
}

.skill-section h3 {
  margin-bottom: 1rem;
}

.card-img-top {
  border-radius: 10%;
  object-fit: cover;
  width: 250px;
  height: 100%;
}

.collapsible-content {
  overflow: hidden;
  max-height: 0;
  transition: max-height 0.3s;
}

.project-card {
  border-radius: 30px;
  padding: 2rem 0rem 0;
  background-color: white;
  transition: background-color 0.3s;
  box-shadow: 0px 5px 20px #c1d0d5;
}

.stack-info {
  font-weight: 300;
}

